Fix scroll behavior when jumping to /#offer.
Not sure why is works, why it is needed

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -53,7 +53,6 @@ h3 {
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
 }
 
 main {
@@ -716,8 +715,12 @@ textarea {
 }
 
 .section {
-  padding: 2em 1em 1em;
+  padding: 5em 1em 5em;
   border-radius: 5px;
+}
+
+.section:first-of-type {
+  padding-top: 2em;
 }
 
 .section:nth-of-type(2n) {
